[tool.poetry]
name = "scrape_repfitness"
version = "0.1.0"
description = ""
authors = ["Aparicio, Ernie <ernesto.aparicio@optum.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.9.1"
requests = "^2.24.0"
aiohttp = "^3.6.2"
config = "^0.5.0"
pytz = "^2020.1"
twilio = "^6.45.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
